# pronounce

./: Cargo.toml  LICENSE  README.md
pronounce-cli/: Cargo.toml
pronounce-cli/src/: main.rs
pronounce/src/: lib.rs
src/: main.rs
