[package]
name = "pronounce-cli"
version = "0.1.0"
authors = ["jordins <jordi.nistal@gmail.com>"]
edition = "2018"

[[bin]]
name = "pronounce"
path = "./src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
pronounce = { path = "../pronounce" }